TODO
    add revision string?

    info about search.php
    credit Peter
    limitation: not for huge co-contents (preg_match restriction)

Version 1beta1 - released TODO
cmb	cleaned up code
cmb	implemented search.php that will search co-contents as well
cmb	implemented backup of co-contents on logout
cmb	implemented auto-detection of available co-contents

Version 1alpha2 - released 2012-02-27
cmb	changed plugin's name to Coco_XH
cmb	fixed faulty code examples in manual (reported by snafu and Gert)
cmb	changed: save button is only shown, if no editor is available
cmb	documented possibility to use scripting
cmb	fixed bug: multiple editors didn't work independently (reported by Gert)
cmb	added $height parameter to also() (suggested by Gert); updated manual accordingly
cmb	removed necessity to insert function call to template to enable editing
cmb	updated manual accordingly
cmb	added screenshots
cmb	cleaned up some code

Version 1alpha1 - released 2012-02-17
cmb	initial release