@@ -7,6 +7,12 @@ $plugin_tx['coco']['syscheck_encoding']="Encoding 'UTF-8' configured";
 $plugin_tx['coco']['syscheck_magic_quotes']="Magic quotes runtime off";
 $plugin_tx['coco']['syscheck_writable']="Folder '%s' writable";
 
+$plugin_tx['coco']['title_cocos']="Available Co-Contents";
+
+$plugin_tx['coco']['menu_main']="Co-Contents";
+
+$plugin_tx['coco']['confirm_delete']="All contents of \"%s\" will be deleted!";
+
 $plugin_tx['coco']['error_invalid_name']="Co-content names may contain a-z, 0-9 and _ only!";
 
 $plugin_tx['coco']['cf_folder_data']="Path to a folder relative to the CMSimple root directory, where to store the plugin's data. E.g. \"userfiles/coco/\". Leave blank to store into the plugin's data/ folder.";
